Railway Backend 已成功部署並顯示 Online。 https://api.caloshape.com/healthz 回傳 {"status":"UP"}。 Production Android 已改用 https://api.caloshape.com。 Email OTP 防暴力破解已修正。 Production cleartext HTTP 已關閉。 Android Backup 已排除使用者資料。 Production 敏感 Log 已移除／R8 strip。 體重照片已改為登入與 owner 驗證，並加入檔案內容驗證。 Backend 500 錯誤不再洩漏 exception。 Production profile、purchase-token AES fail-fast 已完成。 Flyway V1 baseline 已建立，Railway 空資料庫部署成功。 Billing Library 已升級至 9.1.0。 AAB 已停用語言 split，App 內語言切換不再依賴 Play 動態下載。 登出／刪帳後 Android 本機資料清除 coordinator 已完成。 免費試用邏輯已依照 Play 實際回傳天數顯示，初始頁不顯示試用。 試用資格查詢失敗已和「已使用試用」分開。 Billing coroutine 取消後的購買鎖清除已修正。 Entitlement sync request 的欄位驗證與最多 20 筆限制已在 Backend working tree 實作。